--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
+
+body{
+  font-family: 'Nunito', sans-serif;
+  background: #FCF6F5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bg-green{
+  background: rgb(9, 169, 9);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg-fgreen{
+  background:#2C5F2D;
+}
+.bg-mgreen{
+  background:#73bc45;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bg-black{
+  background:#000000;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-teal{
+  background:#A7BEAE;
 }
